[package]
name = "html-markdown-converter"
version = "0.1.0"
authors = ["Aditya Veer Parmar <nakulparmar15@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.63"
features = [
  'console',
]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
